add_library(FlyAST
        ASTBlock.cpp
        ASTClass.cpp
        ASTClassField.cpp
        ASTClassMethod.cpp
        ASTContext.cpp
        ASTExpr.cpp
        ASTExprStmt.cpp
        ASTClassField.cpp
        ASTForBlock.cpp
        ASTFunction.cpp
        ASTFunctionBase.cpp
        ASTFunctionCall.cpp
        ASTGlobalVar.cpp
        ASTIfBlock.cpp
        ASTImport.cpp
        ASTLocalVar.cpp
        ASTNameSpace.cpp
        ASTNode.cpp
        ASTNodeBase.cpp
        ASTParams.cpp
        ASTStmt.cpp
        ASTSwitchBlock.cpp
        ASTTopDef.cpp
        ASTType.cpp
        ASTUnref.cpp
        ASTValue.cpp
        ASTVar.cpp
        ASTVarAssign.cpp
        ASTWhileBlock.cpp
)

target_link_libraries(FlyAST
        FlyCodeGen
        )