add_library(FlyAST
        ASTBlock.cpp
        ASTClass.cpp
        ASTClassVar.cpp
        ASTClassFunction.cpp
        ASTContext.cpp
        ASTExpr.cpp
        ASTExprStmt.cpp
        ASTClassVar.cpp
        ASTForBlock.cpp
        ASTFunction.cpp
        ASTFunctionBase.cpp
        ASTFunctionCall.cpp
        ASTGlobalVar.cpp
        ASTIfBlock.cpp
        ASTImport.cpp
        ASTLocalVar.cpp
        ASTNameSpace.cpp
        ASTNode.cpp
        ASTNodeBase.cpp
        ASTParams.cpp
        ASTStmt.cpp
        ASTSwitchBlock.cpp
        ASTTopDef.cpp
        ASTType.cpp
        ASTUnref.cpp
        ASTValue.cpp
        ASTVarAssign.cpp
        ASTVarRef.cpp
        ASTWhileBlock.cpp
)

target_link_libraries(FlyAST
        FlyCodeGen
        )