add_library(FlyCodeGen
        BackendUtil.cpp
        CodeGen.cpp
        CodeGenExpr.cpp
        CodeGenFunction.cpp
        CodeGenGlobalVar.cpp
        CodeGenHeader.cpp
        CodeGenLocalVar.cpp
        CodeGenModule.cpp
        )

target_link_libraries(FlyCodeGen
        LLVMSupport
        LLVMPasses
        LLVMLTO
        LLVMTarget
        LLVMAArch64AsmParser
        LLVMAMDGPUAsmParser
        LLVMARMAsmParser
        LLVMAVRAsmParser
        LLVMBPFAsmParser
        LLVMMipsAsmParser
        LLVMMSP430AsmParser
        LLVMPowerPCAsmParser
        LLVMRISCVAsmParser
        LLVMSparcAsmParser
        LLVMSystemZAsmParser
        LLVMWebAssemblyAsmParser
        LLVMX86AsmParser

        FlyBasic
        FlyAST
        )