add_library(FlyCodeGen
        BackendUtil.cpp
        CodeGen.cpp
        CodeGenClass.cpp
        CodeGenClassFunction.cpp
        CodeGenClassVar.cpp
        CodeGenExpr.cpp
        CodeGenFunction.cpp
        CodeGenGlobalVar.cpp
        CodeGenHeader.cpp
        CodeGenModule.cpp
        CodeGenVar.cpp
        )

target_link_libraries(FlyCodeGen
        LLVMSupport
        LLVMPasses
        LLVMLTO
        LLVMTarget
        LLVMAArch64AsmParser
        LLVMAMDGPUAsmParser
        LLVMARMAsmParser
        LLVMAVRAsmParser
        LLVMBPFAsmParser
        LLVMMipsAsmParser
        LLVMMSP430AsmParser
        LLVMPowerPCAsmParser
        LLVMRISCVAsmParser
        LLVMSparcAsmParser
        LLVMSystemZAsmParser
        LLVMWebAssemblyAsmParser
        LLVMX86AsmParser

        FlyBasic
        FlyAST
        )