add_library(FlyCompiler
        ChainedDiagnosticConsumer.cpp
        Compiler.cpp
        InputFile.cpp
        InputOptions.cpp
        CompilerInstance.cpp
        CompilerInvocation.cpp
        DiagnosticRenderer.cpp
        LogDiagnosticPrinter.cpp
        OutputFile.cpp
        TextDiagnostic.cpp
        TextDiagnosticBuffer.cpp
        TextDiagnosticPrinter.cpp
        )

target_link_libraries(FlyCompiler
        LLVMSupport
        FlyBasic
        FlyParser
        FlyAST
        FlyCodeGen
        )