add_library(FlyFrontend
        ChainedDiagnosticConsumer.cpp
        FrontendAction.cpp
        CompilerInstance.cpp
        DiagnosticRenderer.cpp
        Frontend.cpp
        FrontendOptions.cpp
        LogDiagnosticPrinter.cpp
        TextDiagnostic.cpp
        TextDiagnosticBuffer.cpp
        TextDiagnosticPrinter.cpp
        )

target_link_libraries(FlyFrontend
        LLVMSupport
        FlyBasic
        FlyParser
        FlyAST
        FlyCodeGen
        )